--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "TrilloApp": {
@@ -121,8 +121,16 @@
               "devServerTarget": "TrilloApp:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
-  "defaultProject": "TrilloApp"
+    }
+  },
+  "defaultProject": "TrilloApp",
+  "cli": {
+    "analytics": false
+  }
 }
